--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
     "name": "brainz",
+    "version": "1.0.0",
     "description": "The right solution for cache in memory",
     "main": "dist/brainz.min.js",
     "authors": [
@@ -17,6 +18,7 @@
         "bower_components",
         "*.json",
         "brainz.js",
+        "gruntfile.coffee",
         "test",
         "tests"
     ]
