--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
         "node_modules",
         "bower_components",
         "*.json",
-        "./brainz.js",
+        "/brainz.js",
         "gruntfile.coffee",
         "test",
         "tests"
